[metadata]
name = tempest_stress
summary = OpenStack is a distributed, asynchronous system that is prone to race condition
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/tempest-stress/src/branch/master/README.rst
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    tempest_stress

[entry_points]
console_scripts =
    run-tempest-stress = tempest_stress.cmd.run_stress:main


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tempest_stress/locale
domain = tempest_stress

[update_catalog]
domain = tempest_stress
output_dir = tempest_stress/locale
input_file = tempest_stress/locale/tempest_stress.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tempest_stress/locale/tempest_stress.pot
