[metadata]
name = tempest_stress
summary = OpenStack is a distributed, asynchronous system that is prone to race condition
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/tempest-stress/src/branch/master/README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    tempest_stress

[entry_points]
console_scripts =
    run-tempest-stress = tempest_stress.cmd.run_stress:main

[compile_catalog]
directory = tempest_stress/locale
domain = tempest_stress

[update_catalog]
domain = tempest_stress
output_dir = tempest_stress/locale
input_file = tempest_stress/locale/tempest_stress.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tempest_stress/locale/tempest_stress.pot
